Rolled back (z-index issue) / cleaned up / Attribution added

--- a/style.css
+++ b/style.css
@@ -1,22 +1,28 @@
-/* 
-    rgb(66, 139, 202)
-    rgb(92, 184, 92)
-    rgb(91, 192, 222)
-    rgb(240, 173, 78)
-    rgb(217, 83, 79)
- */
+/*
+Project Name: ECO2 Agenda Demo 2019 V2
+Project URI: https://jvining.github.io/ECO2-Agenda-2019-V2
+Description: ECO2 Agenda Demo 2019 V2, built on Starter Bootstrap Template (http://bit.ly/1SnymWq)
+Author: Joshua Vining
+Author URI: https://github.com/jvining
 
+rgb(66, 139, 202)
+rgb(92, 184, 92)
+rgb(91, 192, 222)
+rgb(240, 173, 78)
+rgb(217, 83, 79)
+
+*/
 body {background:#fbfbfb; font-family: "Open Sans", "Helvetica Neue", "Helvetica", "Arial", "sans-serif";}
 body h1, body h2, body h3, body h4, body h5 {font-weight:300;}
 body [class*="col-"] {color:#5f5f5f; font-size:16px; line-height:1.75em;}
- 
-body .jumbotron {margin-top:3.5em; margin-bottom:0;} 
- 
-footer {background:#343a40;margin-top:50px;padding:15px 0 0 0; z-index: 1030!important;}
+
+.navbar .navbar-nav .nav-item:last-child a {margin:.25rem; padding:.25rem .75rem;}
+
+footer {background:#343a40;margin-top:50px;padding:15px 0 0 0;}
 footer [class*="col"] a {color:#999;}
 footer [class*="col"] a:hover {color:#fff;}
 
-/* Typography */ 
+ /* Typography */ 
 .fa-lg,.fa-1x,.fa-2x,.fa-3x,.fa-4x,.fa-5x,.fa-6x,.fa-7x,.fa-8x,.fa-9x,.fa-10x{line-height:1.2em!important;} 
 .fa-lg{font-size:1.33333333em!important;} .fa-1x{font-size:1.5em!important;} 
 .fa-2x{font-size:2em!important;} .fa-3x{font-size:3em!important;} .fa-4x{font-size:4em!important;} 
@@ -30,14 +36,14 @@ footer [class*="col"] a:hover {color:#fff;}
 .text-bold {font-weight:700;}
 .text-shadow {text-shadow:rgba( 0, 0, 0, .25 ) .045em .045em;}
 
-.btn,.btn:hover {transition:.3s ease-in-out;}
+ .btn,.btn:hover {transition:.3s ease-in-out;}
 .btn-xl{font-size:30px;padding:8px 10px;border-radius:6px;}
 @media(max-width:768px){.btn-xl{font-size:20px;padding:8px 13px;}}
 
-/* Agenda CSS */
+ /* Agenda CSS */
 .agenda-day-nav{transition: all 0.4s ease;}
-.on-scroll-agenda {position:fixed;top:3.5em;left:0;right:0; padding-top:.75em;background:#fbfbfb;transition: all 0.4s ease;-webkit-box-shadow: 0 3px 10px 1px rgba(0,0,0,.3)!important;box-shadow: 0 3px 10px 1px rgba(0,0,0,.3)!important;}
- 
+.on-scroll-agenda {position:fixed;top:3.5em;left:0;right:0;z-index: 1020;padding-top:.75em;background:#fbfbfb;transition: all 0.4s ease;-webkit-box-shadow: 0 3px 10px 1px rgba(0,0,0,.3)!important;box-shadow: 0 3px 10px 1px rgba(0,0,0,.3)!important;}
+
 #agenda-day-container .bg-primary {background:rgba(66, 139, 202, .1)!important;}
 #agenda-day-container .bg-info {background:rgba(91, 192, 222, .2)!important;}
 #agenda-day-container .bg-success {background:rgba(92, 184, 92, .2) !important}
@@ -71,5 +77,5 @@ footer [class*="col"] a:hover {color:#fff;}
 /* NEW DEVELOPMENT BELOW THIS LINE */
 
 #main{transition:0.3s;}
-.sidenav{height:100%;position:fixed;top:0;left:0;overflow-x:hidden;transition:0.5s;z-index: 1020; box-shadow: 0 3px 10px 1px rgba(0,0,0,.3)!important;}
- 
+#filter-menu{height:100%;position:fixed;top:0;left:0;overflow-x:hidden;  background:white;transition:0.5s;z-index: 1020; box-shadow: 0 3px 10px 1px rgba(0,0,0,.3)!important;}
+@media(max-width:1100px){.on-scroll-agenda{z-index:1015;} #filter-menu{width:100vw; z-index:1020;}}
